tests/ui/object-lifetime/object-lifetime-default-assoc-ty-self-ty-static.stderr
error[E0228]: the lifetime bound for this object type cannot be deduced from context; please supply an explicit bound
  --> $DIR/object-lifetime-default-assoc-ty-self-ty-static.rs:11:18
   |
LL | fn g<'r>(x: &'r <dyn Inner as Outer>::Ty) {}
   |                  ^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0228`.
